<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout_sliderinput_base"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_sliderinput"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white" />

    <SeekBar
        android:id="@+id/seekbar_sliderinput_complexity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:max="10"
        android:progress="5"
        app:layout_constraintBottom_toTopOf="@+id/seekbar_sliderinput_symm"
        app:layout_constraintEnd_toStartOf="@+id/guideline_sliderinput_checkboxes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_sliderinput" />

    <TextView
        android:id="@+id/text_sliderinput_complexityminval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/sliderinput_complexity_min_value"
        app:layout_constraintStart_toStartOf="@+id/seekbar_sliderinput_complexity"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_sliderinput_complexity" />

    <TextView
        android:id="@+id/text_sliderinput_complexitymaxval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/sliderinput_complexity_max_value"
        app:layout_constraintEnd_toEndOf="@+id/seekbar_sliderinput_complexity"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_sliderinput_complexity" />

    <CheckBox
        android:id="@+id/checkbox_sliderinput_complexity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="@+id/seekbar_sliderinput_complexity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_sliderinput_checkboxes"
        app:layout_constraintTop_toTopOf="@+id/seekbar_sliderinput_complexity" />

    <SeekBar
        android:id="@+id/seekbar_sliderinput_symm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:max="10"
        android:progress="5"
        app:layout_constraintBottom_toTopOf="@+id/seekbar_sliderinput_strokecurv"
        app:layout_constraintEnd_toStartOf="@+id/guideline_sliderinput_checkboxes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_sliderinput_complexity" />

    <TextView
        android:id="@+id/text_sliderinput_symmminval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/sliderinput_symm_min_value"
        app:layout_constraintStart_toStartOf="@+id/seekbar_sliderinput_symm"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_sliderinput_symm" />

    <TextView
        android:id="@+id/text_sliderinput_symmmaxval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/sliderinput_symm_max_value"
        app:layout_constraintEnd_toEndOf="@+id/seekbar_sliderinput_symm"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_sliderinput_symm" />

    <CheckBox
        android:id="@+id/checkbox_sliderinput_symm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="@+id/seekbar_sliderinput_symm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_sliderinput_checkboxes"
        app:layout_constraintTop_toTopOf="@+id/seekbar_sliderinput_symm" />

    <SeekBar
        android:id="@+id/seekbar_sliderinput_strokecurv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:max="10"
        android:progress="5"
        app:layout_constraintBottom_toTopOf="@+id/guideline_sliderinput_results"
        app:layout_constraintEnd_toStartOf="@+id/guideline_sliderinput_checkboxes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_sliderinput_symm" />

    <TextView
        android:id="@+id/text_sliderinput_diagminval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/sliderinput_curvy_min_value"
        app:layout_constraintStart_toStartOf="@+id/seekbar_sliderinput_strokecurv"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_sliderinput_strokecurv" />

    <TextView
        android:id="@+id/text_sliderinput_diagmaxval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/sliderinput_curvy_max_value"
        app:layout_constraintEnd_toEndOf="@+id/seekbar_sliderinput_strokecurv"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_sliderinput_strokecurv" />

    <CheckBox
        android:id="@+id/checkbox_sliderinput_strokecurv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="@+id/seekbar_sliderinput_strokecurv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_sliderinput_checkboxes"
        app:layout_constraintTop_toTopOf="@+id/seekbar_sliderinput_strokecurv" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_sliderinput_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <Button
        android:id="@+id/button_sliderinput_resultssize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/sliderinput_fullscreenarrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_sliderinput_results" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleview_sliderinput_results"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorResultsBackground"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/text_sliderinput_numresults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sliderinput_resultssize" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_sliderinput_checkboxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/text_sliderinput_numresults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Showing X results..." />

    <SeekBar
        android:id="@+id/seekbar_sliderinput_searchtolerance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:max="6"
        android:minWidth="96dp"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_sliderinput_tolerancelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sliderinput_tolerance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seekbar_sliderinput_searchtolerance" />

    <TextView
        android:id="@+id/text_sliderinput_noresultshint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sliderinput_noresults"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/recycleview_sliderinput_results"
        app:layout_constraintEnd_toEndOf="@+id/recycleview_sliderinput_results"
        app:layout_constraintStart_toStartOf="@+id/recycleview_sliderinput_results"
        app:layout_constraintTop_toTopOf="@+id/recycleview_sliderinput_results" />

</android.support.constraint.ConstraintLayout>